fixed homepage title size on small screens

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -43,6 +43,17 @@ body {
     font-size: 5vmin;
 }
 
+@media screen and (max-width: 700px) {
+    .main-heading {
+        font-size: 7vmin;
+    }
+
+    .sub-heading {
+        font-size: 3vmin;
+    }
+}
+
+
 /* Homepage Carousel */
 #homepage_carousel {
     max-height: 900px;
@@ -51,6 +62,7 @@ body {
 .carousel-inner {
     max-height: 900px;
 }
+
 .carousel-item {
     max-height: 900px;
 }
